--- a/config/packages/_sylius.yaml
+++ b/config/packages/_sylius.yaml
@@ -18,3 +18,12 @@ sylius_theme:
         filesystem:
             directories:
                 - "%kernel.project_dir%/themes"
+
+sylius_product:
+    resources:
+        product:
+            classes:
+                model: App\Entity\Product
+            translation:
+                classes:
+                    model: App\Entity\ProductTranslation
